--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/papaparse": "^5.3.7",
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
+    "animate.css": "^4.1.1",
     "axios": "^1.3.4",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
