--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.9.2",
+    "mercadopago": "^2.0.7",
     "next": "13.2.4",
     "papaparse": "^5.4.1",
     "react": "18.2.0",
